crates/ruff_linter/src/rules/flake8_comprehensions/snapshots/ruff_linter__rules__flake8_comprehensions__tests__C408_C408.py.snap
---
source: crates/ruff_linter/src/rules/flake8_comprehensions/mod.rs
---
C408 [*] Unnecessary `tuple()` call (rewrite as a literal)
 --> C408.py:1:5
  |
1 | t = tuple()
  |     ^^^^^^^
2 | l = list()
3 | d1 = dict()
  |
help: Rewrite as a literal
  |
1 - t = tuple()
1 + t = ()
  |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `list()` call (rewrite as a literal)
 --> C408.py:2:5
  |
1 | t = tuple()
2 | l = list()
  |     ^^^^^^
3 | d1 = dict()
4 | d2 = dict(a=1)
  |
help: Rewrite as a literal
  |
2 - l = list()
2 + l = []
  |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
 --> C408.py:3:6
  |
1 | t = tuple()
2 | l = list()
3 | d1 = dict()
  |      ^^^^^^
4 | d2 = dict(a=1)
5 | d3 = dict(**d2)
  |
help: Rewrite as a literal
  |
3 - d1 = dict()
3 + d1 = {}
  |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
 --> C408.py:4:6
  |
2 | l = list()
3 | d1 = dict()
4 | d2 = dict(a=1)
  |      ^^^^^^^^^
5 | d3 = dict(**d2)
  |
help: Rewrite as a literal
  |
4 - d2 = dict(a=1)
4 + d2 = {"a": 1}
  |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:14:4
   |
12 | a = list()
13 |
14 | f"{dict(x='y')}"
   |    ^^^^^^^^^^^
15 | f'{dict(x="y")}'
16 | f"{dict()}"
   |
help: Rewrite as a literal
   |
14 - f"{dict(x='y')}"
14 + f"{ {'x': 'y'} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:15:4
   |
14 | f"{dict(x='y')}"
15 | f'{dict(x="y")}'
   |    ^^^^^^^^^^^
16 | f"{dict()}"
17 | f"a {dict()} b"
   |
help: Rewrite as a literal
   |
15 - f'{dict(x="y")}'
15 + f'{ {"x": "y"} }'
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:16:4
   |
14 | f"{dict(x='y')}"
15 | f'{dict(x="y")}'
16 | f"{dict()}"
   |    ^^^^^^
17 | f"a {dict()} b"
   |
help: Rewrite as a literal
   |
16 - f"{dict()}"
16 + f"{ {} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:17:6
   |
15 | f'{dict(x="y")}'
16 | f"{dict()}"
17 | f"a {dict()} b"
   |      ^^^^^^
18 |
19 | f"{dict(x='y') | dict(y='z')}"
   |
help: Rewrite as a literal
   |
17 - f"a {dict()} b"
17 + f"a { {} } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:19:4
   |
17 | f"a {dict()} b"
18 |
19 | f"{dict(x='y') | dict(y='z')}"
   |    ^^^^^^^^^^^
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |
help: Rewrite as a literal
   |
19 - f"{dict(x='y') | dict(y='z')}"
19 + f"{ {'x': 'y'} | dict(y='z')}"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:19:18
   |
17 | f"a {dict()} b"
18 |
19 | f"{dict(x='y') | dict(y='z')}"
   |                  ^^^^^^^^^^^
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |
help: Rewrite as a literal
   |
19 - f"{dict(x='y') | dict(y='z')}"
19 + f"{dict(x='y') | {'y': 'z'} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:20:5
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
   |     ^^^^^^^^^^^
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
20 - f"{ dict(x='y') | dict(y='z') }"
20 + f"{ {'x': 'y'} | dict(y='z') }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:20:19
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
   |                   ^^^^^^^^^^^
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
20 - f"{ dict(x='y') | dict(y='z') }"
20 + f"{ dict(x='y') | {'y': 'z'} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:21:6
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |      ^^^^^^^^^^^
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
21 - f"a {dict(x='y') | dict(y='z')} b"
21 + f"a { {'x': 'y'} | dict(y='z')} b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:21:20
   |
19 | f"{dict(x='y') | dict(y='z')}"
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
   |                    ^^^^^^^^^^^
22 | f"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
21 - f"a {dict(x='y') | dict(y='z')} b"
21 + f"a {dict(x='y') | {'y': 'z'} } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:22:7
   |
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |       ^^^^^^^^^^^
23 |
24 | dict(
   |
help: Rewrite as a literal
   |
22 - f"a { dict(x='y') | dict(y='z') } b"
22 + f"a { {'x': 'y'} | dict(y='z') } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:22:21
   |
20 | f"{ dict(x='y') | dict(y='z') }"
21 | f"a {dict(x='y') | dict(y='z')} b"
22 | f"a { dict(x='y') | dict(y='z') } b"
   |                     ^^^^^^^^^^^
23 |
24 | dict(
   |
help: Rewrite as a literal
   |
22 - f"a { dict(x='y') | dict(y='z') } b"
22 + f"a { dict(x='y') | {'y': 'z'} } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:24:1
   |
22 |   f"a { dict(x='y') | dict(y='z') } b"
23 |
24 | / dict(
25 | |     # comment
26 | | )
   | |_^
27 |
28 |   tuple(  # comment
   |
help: Rewrite as a literal
   |
24 + {
25 |     # comment
26 + }
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `tuple()` call (rewrite as a literal)
  --> C408.py:28:1
   |
26 |   )
27 |
28 | / tuple(  # comment
29 | | )
   | |_^
30 |
31 |   t"{dict(x='y')}"
   |
help: Rewrite as a literal
   |
28 ~ (  # comment
29 ~ )
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:31:4
   |
29 | )
30 |
31 | t"{dict(x='y')}"
   |    ^^^^^^^^^^^
32 | t'{dict(x="y")}'
33 | t"{dict()}"
   |
help: Rewrite as a literal
   |
31 - t"{dict(x='y')}"
31 + t"{ {'x': 'y'} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:32:4
   |
31 | t"{dict(x='y')}"
32 | t'{dict(x="y")}'
   |    ^^^^^^^^^^^
33 | t"{dict()}"
34 | t"a {dict()} b"
   |
help: Rewrite as a literal
   |
32 - t'{dict(x="y")}'
32 + t'{ {"x": "y"} }'
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:33:4
   |
31 | t"{dict(x='y')}"
32 | t'{dict(x="y")}'
33 | t"{dict()}"
   |    ^^^^^^
34 | t"a {dict()} b"
   |
help: Rewrite as a literal
   |
33 - t"{dict()}"
33 + t"{ {} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:34:6
   |
32 | t'{dict(x="y")}'
33 | t"{dict()}"
34 | t"a {dict()} b"
   |      ^^^^^^
35 |
36 | t"{dict(x='y') | dict(y='z')}"
   |
help: Rewrite as a literal
   |
34 - t"a {dict()} b"
34 + t"a { {} } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:36:4
   |
34 | t"a {dict()} b"
35 |
36 | t"{dict(x='y') | dict(y='z')}"
   |    ^^^^^^^^^^^
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |
help: Rewrite as a literal
   |
36 - t"{dict(x='y') | dict(y='z')}"
36 + t"{ {'x': 'y'} | dict(y='z')}"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:36:18
   |
34 | t"a {dict()} b"
35 |
36 | t"{dict(x='y') | dict(y='z')}"
   |                  ^^^^^^^^^^^
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |
help: Rewrite as a literal
   |
36 - t"{dict(x='y') | dict(y='z')}"
36 + t"{dict(x='y') | {'y': 'z'} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:37:5
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
   |     ^^^^^^^^^^^
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
37 - t"{ dict(x='y') | dict(y='z') }"
37 + t"{ {'x': 'y'} | dict(y='z') }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:37:19
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
   |                   ^^^^^^^^^^^
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
37 - t"{ dict(x='y') | dict(y='z') }"
37 + t"{ dict(x='y') | {'y': 'z'} }"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:38:6
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |      ^^^^^^^^^^^
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
38 - t"a {dict(x='y') | dict(y='z')} b"
38 + t"a { {'x': 'y'} | dict(y='z')} b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:38:20
   |
36 | t"{dict(x='y') | dict(y='z')}"
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
   |                    ^^^^^^^^^^^
39 | t"a { dict(x='y') | dict(y='z') } b"
   |
help: Rewrite as a literal
   |
38 - t"a {dict(x='y') | dict(y='z')} b"
38 + t"a {dict(x='y') | {'y': 'z'} } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:39:7
   |
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |       ^^^^^^^^^^^
40 |
41 | # https://github.com/astral-sh/ruff/issues/16234
   |
help: Rewrite as a literal
   |
39 - t"a { dict(x='y') | dict(y='z') } b"
39 + t"a { {'x': 'y'} | dict(y='z') } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:39:21
   |
37 | t"{ dict(x='y') | dict(y='z') }"
38 | t"a {dict(x='y') | dict(y='z')} b"
39 | t"a { dict(x='y') | dict(y='z') } b"
   |                     ^^^^^^^^^^^
40 |
41 | # https://github.com/astral-sh/ruff/issues/16234
   |
help: Rewrite as a literal
   |
39 - t"a { dict(x='y') | dict(y='z') } b"
39 + t"a { dict(x='y') | {'y': 'z'} } b"
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:45:1
   |
43 | # normalize the keyword name to preserve the dictionary key at runtime. The character "ℼ" normalizes
44 | # to "π", and "ſ" normalizes to "s".
45 | dict(ℼ=3.14)
   | ^^^^^^^^^^^^
46 | dict(ſ=1)
47 | dict(𝕒=1, b=2)
   |
help: Rewrite as a literal
   |
45 - dict(ℼ=3.14)
45 + {"π": 3.14}
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:46:1
   |
44 | # to "π", and "ſ" normalizes to "s".
45 | dict(ℼ=3.14)
46 | dict(ſ=1)
   | ^^^^^^^^^
47 | dict(𝕒=1, b=2)
48 | dict(a=1, b=2)  # already NFKC-normalized: unchanged
   |
help: Rewrite as a literal
   |
46 - dict(ſ=1)
46 + {"s": 1}
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:47:1
   |
45 | dict(ℼ=3.14)
46 | dict(ſ=1)
47 | dict(𝕒=1, b=2)
   | ^^^^^^^^^^^^^^
48 | dict(a=1, b=2)  # already NFKC-normalized: unchanged
   |
help: Rewrite as a literal
   |
47 - dict(𝕒=1, b=2)
47 + {"a": 1, "b": 2}
   |
note: This is an unsafe fix and may change runtime behavior

C408 [*] Unnecessary `dict()` call (rewrite as a literal)
  --> C408.py:48:1
   |
46 | dict(ſ=1)
47 | dict(𝕒=1, b=2)
48 | dict(a=1, b=2)  # already NFKC-normalized: unchanged
   | ^^^^^^^^^^^^^^
help: Rewrite as a literal
   |
48 - dict(a=1, b=2)  # already NFKC-normalized: unchanged
48 + {"a": 1, "b": 2}  # already NFKC-normalized: unchanged
   |
note: This is an unsafe fix and may change runtime behavior
